[tool.poetry]
name = "nonebot-plugin-shorturl"
version = "0.1.0"
description = "Generate short url by bot for bypassing censorship"
license = "MIT"
authors = ["StarHeartHunt <starheart233@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/StarHeartHunt/nonebot-plugin-shorturl"
repository = "https://github.com/StarHeartHunt/nonebot-plugin-shorturl"
documentation = "https://github.com/StarHeartHunt/nonebot-plugin-shorturl#readme"
keywords = ["nonebot", "nonebot2", "shorturl"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
isort = "^5.10.1"
black = "^23.1.0"
nonemoji = "^0.1.3"
pre-commit = "^3.3.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "Q"]
ignore = ["E402", "F403", "F405", "C901", "UP037"]

line-length = 88
target-version = "py38"

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
